# lob-engine-rs

./: Cargo.toml  DOCUMENTATION.md  PERFORMANCE.md  README.md
crates/analytics/: Cargo.toml  lib.rs
crates/benchmarks/: Cargo.toml  main.rs
crates/cli/: Cargo.toml  main.rs
crates/latency_sim/: Cargo.toml  lib.rs
crates/lobster_parser/: Cargo.toml  lib.rs
crates/market_events/: Cargo.toml  lib.rs
crates/matching_engine/: Cargo.toml  lib.rs
crates/orderbook/: Cargo.toml  lib.rs
crates/replay_engine/: Cargo.toml  lib.rs
crates/server/: Cargo.toml  main.rs
crates/strategies/: Cargo.toml  lib.rs
crates/validator/: Cargo.toml  lib.rs
docs/: report.json
web/: app.js  index.html  styles.css
