[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
market_events = { path = "../market_events" }
orderbook = { path = "../orderbook" }
replay_engine = { path = "../replay_engine" }

[dev-dependencies]
lobster_parser = { path = "../lobster_parser" }
